--- a/views/error.pug
+++ b/views/error.pug
@@ -3,4 +3,4 @@ extends headerLayout.pug
 block content
 	p There was error: 
 	p= error
-	a(href="https://Schoolathome.theohalpern.repl.co")
+	a(href="https://Schoolathome.theohalpern.repl.co/home") Go Home
